--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-myrobogals/settings.py
 daemons/smsglobal.h
 daemons/rgsmsd.h
 daemons/rgsmsd
@@ -16,3 +15,4 @@ myrobogals.db
 .vscode/
 COCForm.txt
 tmp/
+settings.ini
